--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Asago</title>
+    <title><%= page_title %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,18 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="container">
+      <header>
+        <%= render "shared/header" %>
+      </header>
+      <main>
+        <%= yield %>
+      </main>
+      <aside id="sidebar">
+        <%= render "shared/sidebar" %>
+      </aside>
+      <footer>
+        <%= render "shared/footer" %>
+      </footer>
   </body>
 </html>
