--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
         <%= render "shared/header" %>
       </header>
       <main>
+        <% if flash.notice %>
+          <p class="notice alert alert-primary" role="alert"><%= flash.notice %></p>
+        <% end %>
+
         <%= yield %>
       </main>
       <aside id="sidebar">
