--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,18 @@
 <%= image_tag 'logo.gif', size: '272x48', alt: 'Morning Glory' %>
 
+<% if current_member %>
+<ul class="account-menu">
+  <%# あとで位置を修正 %>
+  <%= current_member.name + 'さん' %>
+  <%= menu_link_to 'ログアウト', :session,
+                                 data: { turbo_method: :delete,
+                                         turbo_confirm: 'ログアウトしますか？'
+                                 },
+                                 class: 'btn btn-sm btn-secondary text-white d-inline ms-3'
+  %>
+</ul>
+<% end %>
+
 <nav class="menubar">
   <ul>
     <%= menu_link_to 'TOP', :root %>
