--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -1,14 +1,19 @@
 <h2>ログイン</h2>
-<form id="login_form">
+
+<% if flash.alert %>
+<p class="alert"><%= flash.alert %></p>
+<% end %>
+
+<%= form_tag :session, id: 'login_form', class: 'mb-3' do %>
   <div>
     <label>ユーザー名：</label>
-    <input type="text">
+    <input type="text" name="name">
   </div>
   <div>
     <label>パスワード：</label>
-    <input type="password">
+    <input type="password" name="password">
   </div>
   <div>
-    <input type="submit" value="ログイン">
+    <input type="submit" value="ログイン" class="btn btn-sm btn-primary text-white">
   </div>
-</form>
+<% end %>
