--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -7,6 +7,6 @@
 </div>
 
 <%= form_for @member do |form| %>
-  <%= render "form", form: form %>
+  <%= render "shared/member_form", form: form %>
   <div><%= form.submit %></div>
 <% end %>
