--- a/app/views/shared/_member_form.html.erb
+++ b/app/views/shared/_member_form.html.erb
@@ -29,9 +29,15 @@
               use_month_numbers: true %></td>
   </tr>
   <tr>
-    <th><%= form.label :email %></th>
+    <th><%= form.label :email, 'メールアドレス' %></th>
     <td><%= form.text_field :email %></td>
   </tr>
+  <% if @member.new_record? %>
+  <tr>
+    <th><%= form.label :password, 'パスワード' %></th>
+    <td><%= form.password_field :password %></td>
+  </tr>
+  <% end %>
   <% if controller.kind_of?(MembersController) %>
   <tr>
     <th><%= Member.human_attribute_name(:administrator) %></th>
