--- a/app/views/members/_body.html.erb
+++ b/app/views/members/_body.html.erb
@@ -25,6 +25,6 @@
   </tr>
   <tr>
     <th>管理者</th>
-    <td><i class="<%= toggle(@member) %>"></i></td>
+    <td><i class="<%= toggle_icon(@member.administrator?) %>"></i></td>
   </tr>
 </table>
