--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -25,7 +25,7 @@
           <td><%= link_to member.name, member %></td>
           <td><%= member.full_name %></td>
           <td>
-            <%= link_to '編集', [:edit, member], class: 'btn btn-sm btn-primary text-white' %>
+            <%= link_to '編集', [:edit, member], class: 'btn btn-sm btn-primary text-white' %> |
             <%= link_to '削除', member, data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' },
                                         class: 'btn btn-sm btn-danger text-white' %>
           </td>
