--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,9 +15,11 @@
 <nav class="menubar">
   <ul>
     <%= menu_link_to 'TOP', :root %>
-    <%= menu_link_to 'ニュース', '#' %>
+    <%= menu_link_to 'ニュース', :articles %>
     <%= menu_link_to 'ブログ', '#' %>
-    <%= menu_link_to '会員名簿', :members if current_member %>
-    <%= menu_link_to '管理ページ', '#' if current_member %>
+    <% if current_member %>
+      <%= menu_link_to '会員名簿', :members %>
+      <%= menu_link_to '管理ページ', '#' %>
+    <% end %>
   </ul>
 </nav>
