--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -3,8 +3,10 @@
 <h1><%= @page_title %></h1>
 
 <ul class="toolbar">
-  <%= menu_link_to 'アカウント情報の編集', :edit_account, class: 'btn btn-sm btn-info text-white' %>
-  <%= menu_link_to 'パスワードの変更', :edit_password, class: 'btn btn-sm btn-danger text-white' %>
+  <%= menu_link_to 'アカウント情報の編集', :edit_account,
+    class: 'btn btn-sm btn-primary text-white' %>
+  <%= menu_link_to 'パスワードの変更', :edit_password,
+    class: 'btn btn-sm btn-danger text-white' %>
 </ul>
 
 <%= render 'members/body' %>
